[tool.poetry]
name = "fha-scraper"
version = "0.1.0"
description = "This scraper scrapes all the exhibition attendees and exhibitor information from the FHA 2024 Singapore website."
authors = ["Mark Huang <zhenghao1@me.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.2"
requests = "^2.31.0"
typer = "^0.12.3"
rich = "^13.7.1"
html5lib = "^1.1"
selenium = "^4.20.0"

[tool.poetry.scripts]
driver = "fha_scraper.control:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
